crates/analyzer/tests/snapshots/errors__call_create_with_wrong_type.snap
---
source: crates/analyzer/tests/errors.rs
expression: "error_string(&path, test_files::fixture(path))"
---
error: incorrect type for argument to `Bar.create`
  ┌─ compile_errors/call_create_with_wrong_type.fe:5:25
  │
5 │         Bar.create(ctx, true)
  │                         ^^^^ this has type `bool`; expected a number

error: `create` expects 2 arguments, but 1 was provided
  ┌─ compile_errors/call_create_with_wrong_type.fe:6:13
  │
6 │         Bar.create(ctx)     // agroce //447
  │             ^^^^^^ --- supplied 1 argument
  │             │       
  │             expects 2 arguments


